--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+django = "^5.1.2"
+djangorestframework = "^3.15.2"
+django-cors-headers = "^4.6.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.10.0"
+isort = "^5.13.2"
+autoflake = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core"]
