--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django = "^5.1.2"
 djangorestframework = "^3.15.2"
 django-cors-headers = "^4.6.0"
+psycopg = "^3.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
