--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "eslint.useFlatConfig": true
+  "eslint.useFlatConfig": true,
+  "python.autoComplete.extraPaths": []
 }
