--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.2"
 djangorestframework = "^3.15.2"
 django-cors-headers = "^4.6.0"
 psycopg = "^3.2.3"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
