--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,19 +30,24 @@ services:
   #     - api
   #   networks:
   #     - pdf-editor-network
-  # web:
-  #   container_name: frontend
-  #   working_dir: /app
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   tty: true
-  #   ports:
-  #     - 3000:3000
-  #   depends_on:
-  #     - api
-  #   networks:
-  #     - pdf-editor-network
+  web:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    tty: true
+    volumes:
+      - ./frontend:/app:cached
+      - node_modules:/app/node_modules
+    environment:
+      - VITE_API_URL=http://localhost:8000
+    ports:
+      - 3000:3000
+    depends_on:
+      api:
+        condition: service_started
+    networks:
+      - pdf-editor-network
   db:
     container_name: db
     image: postgres
@@ -78,3 +83,4 @@ networks:
 
 volumes:
   pg_data:
+  node_modules:
