--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,17 @@
     "@pdfme/common": "^5.1.6",
     "@pdfme/generator": "^5.1.6",
     "@pdfme/ui": "^5.1.6",
+    "@tanstack/react-query": "^5.59.16",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
