add Makefile and update docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       DB_NAME: postgres
       DB_USER: postgres
       DB_PASSWORD: password
+    depends_on:
+      db:
+        condition: service_started
     networks:
       - pdf-editor-network
   # proxy:
