--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,22 @@ services:
       retries: 5
     networks:
       - pdf-editor-network
+  migtaiton:
+    build:
+      context: ./backend
+      dockerfile: ./containers/django/Dockerfile
+    command: "poetry run python manage.py migrate"
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: postgres
+      DB_USER: postgres
+      DB_PASSWORD: password
+    depends_on:
+      db:
+        condition: service_started
+    networks:
+      - pdf-editor-network
 
 networks:
   pdf-editor-network:
