--- a/backend/containers/nginx/conf.d/default.conf
+++ b/backend/containers/nginx/conf.d/default.conf
@@ -1,13 +1,28 @@
-upstream django {
-    server app:8000;
+upstream backend {
+    server backend:8000;
+}
+
+upstream frontend {
+    server frontend:3000;
 }
 
 server {
     listen 80;
-    server_name 0.0.0.0;
+    server_name localhost;
 
     location / {
-        proxy_pass http://django;
+        proxy_pass http://frontend;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
+    location /api/ {
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
