--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,17 +22,20 @@ services:
         condition: service_started
     networks:
       - pdf-editor-network
-  # proxy:
-  #   container_name: proxy
-  #   build:
-  #     context: ./backend
-  #     dockerfile: ./containers/nginx/Dockerfile
-  #   ports:
-  #     - 80:80
-  #   depends_on:
-  #     - api
-  #   networks:
-  #     - pdf-editor-network
+
+  proxy:
+    container_name: proxy
+    build:
+      context: ./backend
+      dockerfile: ./containers/nginx/Dockerfile
+    ports:
+      - 80:80
+    depends_on:
+      - api
+      - web
+    networks:
+      - pdf-editor-network
+
   web:
     container_name: frontend
     build:
@@ -51,6 +54,7 @@ services:
         condition: service_started
     networks:
       - pdf-editor-network
+
   db:
     container_name: db
     image: postgres
@@ -79,6 +83,7 @@ services:
       retries: 5
     networks:
       - pdf-editor-network
+
   migtaiton:
     build:
       context: ./backend
