--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@pdfme/generator": "^5.1.6",
     "@pdfme/ui": "^5.1.6",
     "@tanstack/react-query": "^5.59.16",
+    "axios": "^1.7.7",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
