--- a/backend/containers/nginx/conf.d/default.conf
+++ b/backend/containers/nginx/conf.d/default.conf
@@ -14,6 +14,13 @@ server {
         proxy_pass http://frontend;
     }
 
+    location /static/ {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
     location /admin/ {
         proxy_pass http://backend;
         proxy_set_header Host $host;
